# granit-parser

./: CHANGELOG.md  COMMENTS.md  Cargo.toml  README.md
.github/workflows/: api-compat.yml  ci.yml  fuzz.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: aliases_merges.rs  common.rs  duplicate_keys.rs  flow_collections.rs  large_scalars.rs
src/: char_traits.rs  input.rs  lib.rs  parser.rs  parser_stack.rs  scanner.rs
src/input/: buffered.rs  str.rs
tests/: basic.rs  comment.rs  comments_possible.rs  coverage_edges.rs  flow_collections_fuzz_regression.rs  indentation.rs  issues.rs  misplaced_flow_chars.rs  plain_scalar_indicators.rs  readme.rs  span.rs  spec_test.rs  spec_test.rs.inc  specexamples.rs.inc  test_parser_stack.rs  yaml-test-suite.rs
tools/: README.md
tools/bench_compare/src/: main.rs
tools/gen_large_yaml/src/: gen.rs
tools/walk/src/: main.rs
