[package]
name = "granit-parser"
readme = "README.md"
authors = [
  # Provided versions up to saphyr-parser 0.0.6 inclusive
  "Ethiraric <ethiraric@gmail.com>",
  "David Aguilar <davvid@gmail.com>",
  "Yuheng Chen <yuhengchen@sensetime.com>",

  # Later versions (serde-granit)
  "Bourumir Wyngs <bourumir-wyngs@gmail.com>"
]
categories = [ "encoding", "parser-implementations", "text-processing" ]
description = "A YAML parser with comment and style support, written in pure Rust"
documentation = "https://docs.rs/granit-parser/latest/granit_parser"
edition = "2021"
keywords = [ "yaml", "parser", "no-std", "cst" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bourumir-wyngs/granit-parser"

rust-version = "1.81.0"
version = "0.0.7"
exclude = [
  # Exclude the `yaml-test-suite` from the package. This removes the need to
  # add its license to the package.
  "/tests/yaml-test-suite",
  # We don't need the documents either.
  "/documents",
]

[features]
debug_prints = []

[dependencies]
arraydeque = { version = "0.5.1", default-features = false }
smallvec = {  version = ">= 1.0.0, < 1.16.0" }

[dev-dependencies]
libtest-mimic = "=0.8.1"

[[test]]
name = "yaml-test-suite"
harness = false

[[bin]]
name = "dump_events"
path = "tools/dump_events.rs"

[[bin]]
name = "time_parser"
path = "tools/time_parse.rs"

[[bin]]
name = "run_parser"
path = "tools/run_bench.rs"

[lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
